Add ZIP download button

--- a/index.html
+++ b/index.html
@@ -1,3 +1,18 @@
+<div style="text-align:center; margin-top:30px;">
+  <a href="whatsapp-bot.zip" download>
+    <button style="
+      padding:15px 30px;
+      font-size:18px;
+      background:#25D366;
+      color:white;
+      border:none;
+      border-radius:8px;
+      cursor:pointer;
+    ">
+      📦 ZIP Yüklə (WhatsApp Bot)
+    </button>
+  </a>
+</div>
 <!DOCTYPE html>
 <html lang="az">
 <head>
