--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>MAMEDOFF SHOP</title>
+<title>MAMEDOW SHOP</title>
 
 <style>
-*{box-sizing:border-box;font-family:Inter,Arial,Helvetica,sans-serif}
+*{box-sizing:border-box;font-family:Inter,Arial,sans-serif}
 body{margin:0;background:#020617;color:#fff}
 header{text-align:center;padding:25px;border-bottom:1px solid #1f2933}
 header h1{color:#22c55e;margin:0;font-size:30px}
@@ -36,8 +36,8 @@ footer{text-align:center;padding:15px;color:#94a3b8;border-top:1px solid #1f2933
 <body>
 
 <header>
-<h1>MAMEDOFF SHOP</h1>
-<p>Sürətli • Etibarlı • WhatsApp ilə avtomatik sifariş</p>
+<h1>MAMEDOW SHOP</h1>
+<p>Sürətli • Etibarlı • WhatsApp ilə sifariş</p>
 </header>
 
 <div class="container">
@@ -60,40 +60,9 @@ footer{text-align:center;padding:15px;color:#94a3b8;border-top:1px solid #1f2933
 </div>
 </div>
 
-<!-- TIKTOK JETON -->
-<div class="category">
-<button onclick="toggle(this)">🎵 TikTok Jeton</button>
-<div class="items">
-<div class="item"><span>70 Jeton — 2 AZN</span><button onclick="order('TikTok 70 Jeton - 2 AZN')">Sifariş</button></div>
-<div class="item"><span>350 Jeton — 7.50 AZN</span><button onclick="order('TikTok 350 Jeton - 7.50 AZN')">Sifariş</button></div>
-<div class="item"><span>700 Jeton — 14.50 AZN</span><button onclick="order('TikTok 700 Jeton - 14.50 AZN')">Sifariş</button></div>
-<div class="item"><span>1400 Jeton — 27.30 AZN</span><button onclick="order('TikTok 1400 Jeton - 27.30 AZN')">Sifariş</button></div>
-</div>
 </div>
 
-<!-- TIKTOK LIKE -->
-<div class="category">
-<button onclick="toggle(this)">❤️ TikTok Like</button>
-<div class="items">
-<div class="item"><span>1000 Like — 1 AZN</span><button onclick="order('TikTok 1000 Like - 1 AZN')">Sifariş</button></div>
-<div class="item"><span>5000 Like — 5 AZN</span><button onclick="order('TikTok 5000 Like - 5 AZN')">Sifariş</button></div>
-<div class="item"><span>10000 Like — 10 AZN</span><button onclick="order('TikTok 10000 Like - 10 AZN')">Sifariş</button></div>
-</div>
-</div>
-
-<!-- FREE FIRE -->
-<div class="category">
-<button onclick="toggle(this)">🔥 Free Fire Elmas</button>
-<div class="items">
-<div class="item"><span>110 Elmas — 2 AZN</span><button onclick="order('Free Fire 110 Elmas - 2 AZN')">Sifariş</button></div>
-<div class="item"><span>341 Elmas — 5 AZN</span><button onclick="order('Free Fire 341 Elmas - 5 AZN')">Sifariş</button></div>
-<div class="item"><span>1166 Elmas — 16 AZN</span><button onclick="order('Free Fire 1166 Elmas - 16 AZN')">Sifariş</button></div>
-</div>
-</div>
-
-</div>
-
-<footer>© 2026 MAMEDOFF SHOP</footer>
+<footer>© 2026 MAMEDOW SHOP</footer>
 
 <script>
 const WHATSAPP="994554886181";
@@ -104,7 +73,7 @@ function toggle(b){
 function order(t){
   window.open(
     `https://wa.me/${WHATSAPP}?text=${encodeURIComponent(
-      "Salam, MAMEDOFF SHOP-dan sifariş vermək istəyirəm:\n"+t
+      "Salam, MAMEDOW SHOP-dan sifariş vermək istəyirəm:\n"+t
     )}`,
     "_blank"
   );
