--- a/index.html
+++ b/index.html
@@ -24,12 +24,15 @@ header p{color:#94a3b8;margin-top:6px}
   padding:12px;margin-bottom:8px;
   display:flex;justify-content:space-between;gap:10px;align-items:center
 }
+.item span{font-size:15px}
 .item button{
   background:#22c55e;color:#000;border:none;
   padding:8px 14px;border-radius:8px;cursor:pointer;font-weight:600
 }
 footer{text-align:center;padding:15px;color:#94a3b8;border-top:1px solid #1f2933}
-@media(max-width:600px){.item{flex-direction:column;align-items:flex-start}}
+@media(max-width:600px){
+  .item{flex-direction:column;align-items:flex-start}
+}
 </style>
 </head>
 
@@ -57,6 +60,57 @@ footer{text-align:center;padding:15px;color:#94a3b8;border-top:1px solid #1f2933
 <div class="item"><span>3850 UC — 80 AZN</span><button onclick="order('3850 UC - 80 AZN')">Sifariş</button></div>
 <div class="item"><span>8100 UC — 160 AZN</span><button onclick="order('8100 UC - 160 AZN')">Sifariş</button></div>
 <div class="item"><span>16200 UC — 315 AZN</span><button onclick="order('16200 UC - 315 AZN')">Sifariş</button></div>
+</div>
+</div>
+
+<!-- TIKTOK JETON -->
+<div class="category">
+<button onclick="toggle(this)">🎵 TikTok Jeton</button>
+<div class="items">
+<div class="item"><span>70 Jeton — 2 AZN</span><button onclick="order('TikTok 70 Jeton - 2 AZN')">Sifariş</button></div>
+<div class="item"><span>350 Jeton — 7.50 AZN</span><button onclick="order('TikTok 350 Jeton - 7.50 AZN')">Sifariş</button></div>
+<div class="item"><span>700 Jeton — 14.50 AZN</span><button onclick="order('TikTok 700 Jeton - 14.50 AZN')">Sifariş</button></div>
+<div class="item"><span>1400 Jeton — 27.30 AZN</span><button onclick="order('TikTok 1400 Jeton - 27.30 AZN')">Sifariş</button></div>
+</div>
+</div>
+
+<!-- TIKTOK BAXIŞ -->
+<div class="category">
+<button onclick="toggle(this)">🔥 TikTok Baxış</button>
+<div class="items">
+<div class="item"><span>10K — 1 AZN</span><button onclick="order('TikTok 10K Baxış - 1 AZN')">Sifariş</button></div>
+<div class="item"><span>50K — 5 AZN</span><button onclick="order('TikTok 50K Baxış - 5 AZN')">Sifariş</button></div>
+<div class="item"><span>100K — 9 AZN</span><button onclick="order('TikTok 100K Baxış - 9 AZN')">Sifariş</button></div>
+</div>
+</div>
+
+<!-- TIKTOK LIKE -->
+<div class="category">
+<button onclick="toggle(this)">❤️ TikTok Like</button>
+<div class="items">
+<div class="item"><span>1000 Like — 1 AZN</span><button onclick="order('TikTok 1000 Like - 1 AZN')">Sifariş</button></div>
+<div class="item"><span>5000 Like — 5 AZN</span><button onclick="order('TikTok 5000 Like - 5 AZN')">Sifariş</button></div>
+<div class="item"><span>10000 Like — 10 AZN</span><button onclick="order('TikTok 10000 Like - 10 AZN')">Sifariş</button></div>
+</div>
+</div>
+
+<!-- INSTAGRAM -->
+<div class="category">
+<button onclick="toggle(this)">📸 Instagram Takipçi</button>
+<div class="items">
+<div class="item"><span>200 — 2.50 AZN</span><button onclick="order('Instagram 200 Takipçi - 2.50 AZN')">Sifariş</button></div>
+<div class="item"><span>500 — 7.50 AZN</span><button onclick="order('Instagram 500 Takipçi - 7.50 AZN')">Sifariş</button></div>
+<div class="item"><span>1K — 13.50 AZN</span><button onclick="order('Instagram 1K Takipçi - 13.50 AZN')">Sifariş</button></div>
+</div>
+</div>
+
+<!-- FREE FIRE -->
+<div class="category">
+<button onclick="toggle(this)">🔥 Free Fire Elmas</button>
+<div class="items">
+<div class="item"><span>110 Elmas — 2 AZN</span><button onclick="order('Free Fire 110 Elmas - 2 AZN')">Sifariş</button></div>
+<div class="item"><span>341 Elmas — 5 AZN</span><button onclick="order('Free Fire 341 Elmas - 5 AZN')">Sifariş</button></div>
+<div class="item"><span>1166 Elmas — 16 AZN</span><button onclick="order('Free Fire 1166 Elmas - 16 AZN')">Sifariş</button></div>
 </div>
 </div>
 
